@@ -47,3 +47,6 @@ requiresAuth    = true
 
 [UserImportMgr]
 requiresAuth    = true
+
+[custom]
+hook            = 
